// Package handlers implements gRPC service handlers for the OSE Advisory Service.
//
// This package provides the core request handling logic that orchestrates between
// validation, pattern graph queries, and blueprint generation.
package handlers

import (
	"context"
	"fmt"
	"time"

	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	pb "github.com/mysgeniels75-byte/ose-api/api/proto/advisory/v1"
	"github.com/mysgeniels75-byte/ose-api/pkg/validation"
)

// AdvisoryHandler implements the AdvisoryService gRPC service.
//
// This handler is the orchestration layer that:
//   1. Validates requests at the boundary (trust perimeter)
//   2. Routes to backend services (Pattern Graph, Generator)
//   3. Aggregates partial results into complete responses
//   4. Handles errors gracefully with appropriate gRPC status codes
//   5. Provides observability through structured logging
//
// Week 3 Implementation: Mock responses for testing infrastructure
// Week 5+: Replace mocks with real Pattern Graph queries
// Week 6-8: Replace mocks with real Blueprint generation
type AdvisoryHandler struct {
	pb.UnimplementedAdvisoryServiceServer
	logger *zap.Logger
	// patternClient      *patterns.Client      // Week 5: Neo4j Pattern Graph
	// blueprintGenerator *generator.Generator  // Week 6-8: Template Engine
}

// NewAdvisoryHandler creates a new advisory service handler.
func NewAdvisoryHandler(logger *zap.Logger) *AdvisoryHandler {
	return &AdvisoryHandler{
		logger: logger,
	}
}

// ═════════════════════════════════════════════════════════════════════════════
// GENERATE BLUEPRINT
// ═════════════════════════════════════════════════════════════════════════════

// GenerateBlueprint generates an architectural blueprint based on service constraints.
//
// This is the primary advisory interface. It takes service requirements and returns
// a complete blueprint with recommended patterns, generated artifacts, and quality targets.
//
// Request Flow:
//   1. Validate service constraints (pkg/validation)
//   2. Query Pattern Graph for relevant patterns (Week 5)
//   3. Generate artifacts from templates (Week 6-8)
//   4. Calculate performance targets (Week 9-10)
//   5. Return complete blueprint
//
// Week 3 Implementation: Returns mock blueprint after validation
func (h *AdvisoryHandler) GenerateBlueprint(
	ctx context.Context,
	req *pb.GenerateBlueprintRequest,
) (*pb.GenerateBlueprintResponse, error) {
	h.logger.Info("GenerateBlueprint called",
		zap.String("service_name", req.GetConstraints().GetServiceName()),
	)

	// ═════════════════════════════════════════════════════════════════════════
	// STEP 1: VALIDATION AT THE BOUNDARY
	// ═════════════════════════════════════════════════════════════════════════

	if err := validation.ValidateServiceConstraints(req.GetConstraints()); err != nil {
		h.logger.Warn("Invalid service constraints",
			zap.Error(err),
			zap.String("service_name", req.GetConstraints().GetServiceName()),
		)
		return nil, status.Errorf(codes.InvalidArgument,
			"invalid service constraints: %v", err)
	}

	// ═════════════════════════════════════════════════════════════════════════
	// STEP 2: MOCK RESPONSE (Week 3 infrastructure testing)
	// ═════════════════════════════════════════════════════════════════════════

	blueprintID := generateBlueprintID(req.GetConstraints().GetServiceName())

	// Mock recommended patterns based on service type
	patterns := h.mockRecommendedPatterns(req.GetConstraints())

	// Mock generated artifacts
	artifacts := h.mockGeneratedArtifacts(req.GetConstraints())

	// Mock performance targets
	targets := h.mockPerformanceTargets(req.GetConstraints())

	blueprint := &pb.Blueprint{
		BlueprintId:         blueprintID,
		ServiceName:         req.GetConstraints().GetServiceName(),
		Patterns:            patterns,
		Artifacts:           artifacts,
		PerformanceTargets:  targets,
		GeneratedAt:         time.Now().Unix(),
	}

	h.logger.Info("Blueprint generated",
		zap.String("blueprint_id", blueprintID),
		zap.Int("pattern_count", len(patterns)),
		zap.Int("artifact_count", len(artifacts)),
	)

	return &pb.GenerateBlueprintResponse{
		Blueprint: blueprint,
	}, nil
}

// ═════════════════════════════════════════════════════════════════════════════
// SEARCH PATTERNS
// ═════════════════════════════════════════════════════════════════════════════

// SearchPatterns searches the Pattern Graph for patterns matching criteria.
//
// Week 3 Implementation: Returns mock search results
// Week 5: Replace with real Neo4j Cypher queries
func (h *AdvisoryHandler) SearchPatterns(
	ctx context.Context,
	req *pb.SearchPatternsRequest,
) (*pb.SearchPatternsResponse, error) {
	h.logger.Info("SearchPatterns called",
		zap.String("query", req.GetQuery()),
	)

	// Mock search results
	patterns := []*pb.PatternSummary{
		{
			PatternId:   "event-sourcing-v1",
			Name:        "Event Sourcing",
			Category:    "Data Management",
			Description: "Store state changes as append-only event log",
			UsageCount:  42,
		},
		{
			PatternId:   "cqrs-v1",
			Name:        "Command Query Responsibility Segregation",
			Category:    "Architecture",
			Description: "Separate read and write data models",
			UsageCount:  35,
		},
	}

	h.logger.Info("Pattern search completed",
		zap.Int("result_count", len(patterns)),
	)

	return &pb.SearchPatternsResponse{
		Patterns: patterns,
	}, nil
}

// ═════════════════════════════════════════════════════════════════════════════
// VALIDATE SERVICE
// ═════════════════════════════════════════════════════════════════════════════

// ValidateService validates service constraints without generating a full blueprint.
//
// This is useful for CLI validation before initiating the full advisory process.
func (h *AdvisoryHandler) ValidateService(
	ctx context.Context,
	req *pb.ValidateServiceRequest,
) (*pb.ValidateServiceResponse, error) {
	h.logger.Info("ValidateService called",
		zap.String("service_name", req.GetConstraints().GetServiceName()),
	)

	err := validation.ValidateServiceConstraints(req.GetConstraints())

	if err != nil {
		return &pb.ValidateServiceResponse{
			Valid:        false,
			ErrorMessage: err.Error(),
		}, nil
	}

	return &pb.ValidateServiceResponse{
		Valid: true,
	}, nil
}

// ═════════════════════════════════════════════════════════════════════════════
// REGISTER SERVICE
// ═════════════════════════════════════════════════════════════════════════════

// RegisterService registers telemetry data for a deployed service.
//
// This is called by teams after implementing a blueprint to provide feedback
// for the Ξ quality measurement system (Week 9-10).
//
// The telemetry enables:
//   - Relevance: Which patterns were actually used?
//   - Actionability: How much code modification was needed?
//   - Impact: Did the service meet performance targets?
func (h *AdvisoryHandler) RegisterService(
	ctx context.Context,
	req *pb.RegisterServiceRequest,
) (*pb.RegisterServiceResponse, error) {
	h.logger.Info("RegisterService called",
		zap.String("blueprint_id", req.GetBlueprintId()),
		zap.Float64("relevance_score", req.GetRelevanceScore()),
		zap.Float64("actionability_score", req.GetActionabilityScore()),
		zap.Float64("impact_score", req.GetImpactScore()),
	)

	// Week 3: Log telemetry for observability
	// Week 9-10: Store in database, update pattern confidence, calculate Ξ

	// Mock quality level determination
	overallScore := (req.GetRelevanceScore() + req.GetActionabilityScore() + req.GetImpactScore()) / 3.0
	qualityLevel := determineQualityLevel(overallScore)

	h.logger.Info("Service registered",
		zap.String("blueprint_id", req.GetBlueprintId()),
		zap.Float64("overall_score", overallScore),
		zap.String("quality_level", qualityLevel),
	)

	return &pb.RegisterServiceResponse{
		Success:       true,
		Message:       fmt.Sprintf("Service registered successfully. Quality level: %s", qualityLevel),
		OverallScore:  overallScore,
		QualityLevel:  qualityLevel,
	}, nil
}

// ═════════════════════════════════════════════════════════════════════════════
// MOCK HELPERS (Week 3 only - replaced in Week 5-10)
// ═════════════════════════════════════════════════════════════════════════════

// mockRecommendedPatterns generates mock pattern recommendations.
func (h *AdvisoryHandler) mockRecommendedPatterns(constraints *pb.ServiceConstraints) []*pb.RecommendedPattern {
	patterns := []*pb.RecommendedPattern{}

	// Recommend patterns based on service type
	switch constraints.GetServiceType() {
	case pb.ServiceType_SERVICE_TYPE_API:
		patterns = append(patterns, &pb.RecommendedPattern{
			PatternId:   "rest-api-v1",
			Name:        "RESTful API",
			Confidence:  0.92,
			Rationale:   "Standard pattern for synchronous API services",
			Category:    "API Design",
		})
		patterns = append(patterns, &pb.RecommendedPattern{
			PatternId:   "circuit-breaker-v1",
			Name:        "Circuit Breaker",
			Confidence:  0.85,
			Rationale:   "Prevents cascade failures in distributed systems",
			Category:    "Resilience",
		})

	case pb.ServiceType_SERVICE_TYPE_EVENT_PROCESSOR:
		patterns = append(patterns, &pb.RecommendedPattern{
			PatternId:   "event-sourcing-v1",
			Name:        "Event Sourcing",
			Confidence:  0.88,
			Rationale:   "Maintains complete audit trail of state changes",
			Category:    "Data Management",
		})
		patterns = append(patterns, &pb.RecommendedPattern{
			PatternId:   "cqrs-v1",
			Name:        "CQRS",
			Confidence:  0.82,
			Rationale:   "Optimizes read and write paths separately",
			Category:    "Architecture",
		})

	case pb.ServiceType_SERVICE_TYPE_STREAM_PROCESSOR:
		patterns = append(patterns, &pb.RecommendedPattern{
			PatternId:   "backpressure-v1",
			Name:        "Backpressure",
			Confidence:  0.90,
			Rationale:   "Handles variable load in streaming systems",
			Category:    "Flow Control",
		})
	}

	// Add consistency-specific patterns
	if constraints.GetConsistencyModel() == pb.ConsistencyModel_CONSISTENCY_MODEL_STRONG {
		patterns = append(patterns, &pb.RecommendedPattern{
			PatternId:   "transactional-outbox-v1",
			Name:        "Transactional Outbox",
			Confidence:  0.87,
			Rationale:   "Ensures atomic commits with strong consistency",
			Category:    "Data Management",
		})
	}

	return patterns
}

// mockGeneratedArtifacts generates mock code artifacts.
func (h *AdvisoryHandler) mockGeneratedArtifacts(constraints *pb.ServiceConstraints) []*pb.Artifact {
	serviceName := constraints.GetServiceName()

	return []*pb.Artifact{
		{
			Type:     pb.ArtifactType_ARTIFACT_TYPE_PROTO,
			Path:     fmt.Sprintf("api/%s/v1/%s.proto", serviceName, serviceName),
			Content:  []byte(fmt.Sprintf("// Mock protobuf definition for %s\nservice %sService {}", serviceName, serviceName)),
			Language: "protobuf",
		},
		{
			Type:     pb.ArtifactType_ARTIFACT_TYPE_CODE,
			Path:     fmt.Sprintf("cmd/%s/main.go", serviceName),
			Content:  []byte(fmt.Sprintf("// Mock Go service for %s\npackage main\n\nfunc main() {\n\tprintln(\"Starting %s...\")\n}", serviceName, serviceName)),
			Language: "go",
		},
		{
			Type:     pb.ArtifactType_ARTIFACT_TYPE_CONFIG,
			Path:     fmt.Sprintf("deployments/k8s/%s.yaml", serviceName),
			Content:  []byte(fmt.Sprintf("# Mock Kubernetes deployment for %s\napiVersion: apps/v1\nkind: Deployment", serviceName)),
			Language: "yaml",
		},
	}
}

// mockPerformanceTargets generates mock performance targets.
func (h *AdvisoryHandler) mockPerformanceTargets(constraints *pb.ServiceConstraints) *pb.PerformanceTargets {
	return &pb.PerformanceTargets{
		TargetTps:       constraints.GetThroughputTps(),
		TargetP99Ms:     constraints.GetLatencyP99Ms(),
		TargetP95Ms:     int32(float64(constraints.GetLatencyP99Ms()) * 0.8),
		TargetP50Ms:     int32(float64(constraints.GetLatencyP99Ms()) * 0.5),
		MaxErrorRate:    0.01, // 1% max error rate
	}
}

// generateBlueprintID creates a unique blueprint identifier.
func generateBlueprintID(serviceName string) string {
	return fmt.Sprintf("bp-%s-%d", serviceName, time.Now().Unix())
}

// determineQualityLevel converts numeric score to quality level string.
func determineQualityLevel(score float64) string {
	switch {
	case score >= 0.85:
		return "EXCELLENT"
	case score >= 0.75:
		return "VERY GOOD"
	case score >= 0.65:
		return "GOOD"
	case score >= 0.50:
		return "ACCEPTABLE"
	default:
		return "NEEDS IMPROVEMENT"
	}
}
